--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "lint":"next lint --fix"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -20,13 +21,14 @@
     "tailwindcss": "3.4.16",
     "typescript": "5.7.2",
     "use-debounce": "^10.0.4",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.1.2"
   }
 }
